feat: use util functions from FuturesUtils to tasks sequentially